--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
   },
   "homepage": "https://github.com/bladexr8/graphbook#readme",
   "dependencies": {
+    "@graphql-tools/schema": "^8.3.10",
+    "apollo-server-express": "^3.6.7",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "graphql": "^16.4.0",
     "helmet": "^5.0.2",
     "nodemon": "^2.0.16",
     "react": "^18.1.0",
