--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,13 +4,20 @@ version: '3.1'
 services:
 
   db:
-    image: mariadb
+    image: mariadb:latest
     restart: always
+    ports:
+      - 3306:3306
     environment:
       MARIADB_ROOT_PASSWORD: example
+    volumes:
+      - mysql_db_data_container:/var/lib/mysql
 
   adminer:
-    image: adminer
+    image: adminer:latest
     restart: always
     ports:
       - 8080:8080
+
+volumes:
+  mysql_db_data_container:
