--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "client": "webpack serve --devtool inline-source-map --hot --config webpack.client.config.js",
     "client:build": "webpack --config webpack.client.build.config.js",
-    "server": "nodemon --exec babel-node --watch src/server src/server/index.js",
+    "server": "nodemon --exec babel-node --plugins require-context-hook --watch src/server src/server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -30,6 +30,7 @@
     "apollo-server-express": "^3.6.7",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "graphql": "^16.4.0",
     "helmet": "^5.0.2",
@@ -47,6 +48,7 @@
     "@babel/preset-env": "^7.17.10",
     "@babel/preset-react": "^7.16.7",
     "babel-loader": "^8.2.5",
+    "babel-plugin-require-context-hook": "^1.0.0",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
     "file-loader": "^6.2.0",
