--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/bladexr8/graphbook#readme",
   "dependencies": {
+    "@apollo/client": "^3.6.1",
     "@graphql-tools/schema": "^8.3.10",
     "apollo-server-express": "^3.6.7",
     "compression": "^1.7.4",
